--- a/src/www/style.css
+++ b/src/www/style.css
@@ -8,3 +8,34 @@
     width: 200px;
     height: 200px;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.video {
+    border-radius: 20px;
+    border: 3px solid #000;
+    margin-top: 20px; /* 添加顶部间距 */
+}
+
+.button-container {
+    margin-top: 20px; /* 调整按钮容器的顶部间距 */
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: gray;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 2px solid #000;
+}
+
+button:hover {
+    background-color: black;
+}
